# mcp-chatbot

./: .env.example  MANIFEST.in  README.MD  main.py  pyproject.toml  requirements.txt  servers_config.json  setup.py
myllm/: __init__.py  cli.py  core.py  servers_config.json
